--- a/src/components/question.css
+++ b/src/components/question.css
@@ -3,8 +3,10 @@
   color: white;
   border-radius: 20px;
   max-width: 612px;
+  width: 100%;
   margin: 30px 0;
   padding: 10px;
+  box-sizing: border-box;
 }
 
 .question-header {
