--- a/src/components/question.css
+++ b/src/components/question.css
@@ -20,7 +20,7 @@
 
 .question-answer {
   padding: 20px;
-  border: 5px solid rgba(0, 0, 0, 0.6);
+  border: 2px solid rgba(0, 0, 0, 0.6);
   background: rgba(0, 0, 0, 0.6);
 }
 
@@ -35,6 +35,7 @@
 .answer-correct {
   background-color: red;
   font-weight: bold;
+  font-size: large;
 }
 
 img {
