--- a/src/components/background.css
+++ b/src/components/background.css
@@ -1,8 +1,8 @@
-@keyframes move {
+/* @keyframes move {
   100% {
     transform: translate3d(0, 0, 1px) rotate(360deg);
   }
-}
+} */
 
 .background {
   position: fixed;
@@ -11,11 +11,11 @@
   height: 100vh;
   top: 0;
   left: 0;
-  background: #d61c1c;
+  background: black;
   overflow: hidden;
 }
 
-.background span {
+/* .background span {
   width: 11vmin;
   height: 11vmin;
   border-radius: 11vmin;
@@ -116,4 +116,4 @@
   animation-delay: -10s;
   transform-origin: 12vw 2vh;
   box-shadow: 22vmin 0 3.5042010496528846vmin currentColor;
-}
+} */
