--- a/src/components/question.css
+++ b/src/components/question.css
@@ -1,7 +1,7 @@
 .question-block {
   background-color: rgba(0, 0, 0, 0.507);
   color: white;
-  border-radius: 20px;
+  border-radius: 15px;
   max-width: 612px;
   width: 100%;
   margin: 30px 0;
@@ -20,7 +20,7 @@
 
 .question-answer {
   padding: 20px;
-  border: 2px solid rgba(0, 0, 0, 0.6);
+  border: 1px solid rgba(255, 255, 255, 0.4);
   background: rgba(0, 0, 0, 0.6);
 }
 
@@ -33,7 +33,7 @@
 }
 
 .answer-correct {
-  background-color: red;
+  background-color: rgba(36, 123, 177, 0.764);
   font-weight: bold;
   font-size: large;
 }
