--- a/src/components/question.css
+++ b/src/components/question.css
@@ -7,6 +7,7 @@
   margin: 30px 0;
   padding: 10px;
   box-sizing: border-box;
+  position: relative;
 }
 
 .question-header {
@@ -40,4 +41,10 @@
 
 img {
   width: 100%;
+}
+
+.hide-button{
+  position: absolute;
+  top: 0px;
+  left: 0px;
 }
